--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
+
+
+
+
+
+
+
+
 body,
 
 .tooltip {
@@ -8,6 +18,12 @@ body,
 
 .header-bar {
   background-color: #794a48;
+  /* #794a48; */
+}
+.hermes {
+    margin-right: 10px;
+    color: whitesmoke;
+    font-size: larger;
 }
 
 .container--narrow {
